meja/tests/implicits-fail.stderr
File "tests/implicits-fail.meja", line 1, characters 14-52:
Error: Could not find an instance for an implicit variable of type int
                                                                    testing_show_constr.
