meja/tests/implicits-fail.meja
let (i, j) = (testing_show (18), testing_show (true));
